@@ -4,6 +4,7 @@ Changelog
 0.9.5 - Unreleased
 ------------------
 
+* Register criteria AT types using the right package name
 * Fix a bug with the JavaScript that narrows the criteria types by
   index/field
 * Use separate meta_types instead of overwriting the ATCT meta types,
